Se implementó el controlador de las subscripciones en el proyecto
